# blaze

./: .gitmodules  .prettierrc  BUILD.gn  Cargo.toml  LICENSE  README.md  build.rs  example.js
.github/workflows/: ci.yml
compiler/: Cargo.toml  lib.rs
fireball/: BUILD.gn  Cargo.toml  isolate.rs  lib.rs  v8.cc  v8.h  v8.rs
fireball/tools/: gn_ninja_binaries.py
src/: V8.cc  engine.cc  internal.h  isolate.cc  isolate.rs  libblaze.rs  main.rs  methods.rs  v8.cc  v8.h  v8.rs
typescript/: Cargo.toml  lib.rs
