[workspace]
members = [
  "typescript"
]

[package]
name = "blaze"
version = "0.1.0"
authors = ["Jacob Gillespie <jacobwgillespie@gmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
typescript = { path = "./typescript", version = "0.0.1" }

[build-dependencies]
cargo_gn = "0.0.13"
which = "3.0.0"
typescript = { path = "./typescript", version = "0.0.1" }
