[workspace]
members = [
  "compiler",
  "fireball"
]

[package]
name = "blaze"
version = "0.1.0"
authors = ["Jacob Gillespie <jacobwgillespie@gmail.com>"]
edition = "2018"

[dependencies]
blazerod_compiler = { path = "./compiler", version = "0.1.0" }
fireball = { path = "./fireball", version = "0.1.0" }
