[package]
name = "blazerod_compiler"
version = "0.1.0"
authors = ["Jacob Gillespie <jacobwgillespie@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
fireball = { path = "../fireball", version = "0.1.0" }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
