[package]
name = "fireball"
version = "0.1.0"
authors = ["Jacob Gillespie <jacobwgillespie@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
libc = "0.2"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"

[build-dependencies]
cargo_gn = "0.0.13"
which = "3.0.0"
